# hram.dev

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  config.h.in  hram.cpp  hram.rc  hram.sln  hram.vcxproj  hram.vcxproj.filters  my_app.c  my_app.h  my_asm.h  my_asmkeys.c  my_assembly.cpp  my_file.c  my_file.h  my_font.c  my_font.h  my_main.c  my_main.h  my_memory.c  my_memory.h  my_screen.h  my_userprog.c  my_userprog.h  my_window.c  my_window.h  vcpkg.json
.github/workflows/: build.yml  docsite.yml
asmjit/: asmjit.vcxproj  asmjit.vcxproj.filters  cpp.hint
asmtk/: asmtk.vcxproj  asmtk.vcxproj.filters  cpp.hint
box2d/: box2d.vcxproj  box2d.vcxproj.filters
docs/: index.html
glad/include/glad/: gl.h
glad/src/: gl.c
hram/: Image.cpp  Image.h  Screen.cpp  Screen.h  Window.cpp  Window.h  app.cpp  app.h  bar.lua  foo.lua  framework.h  hram.vcxproj  hram.vcxproj.filters  image.cpp  image.h  main.cpp  memory.cpp  resource.h  thread.cpp  util.cpp  util.h
lpeg/: cpp.hint  lpeg.h  lpeg.vcxproj  lpeg.vcxproj.filters  lptree.c
lua/: boot.lua  editor.lua  lua.vcxproj  lua.vcxproj.filters  prompt.lua
resources/: frag.shader  vert.shader
src/: app.cpp  app.hpp  canvas.cpp  canvas.hpp  filemanager.cpp  filemanager.hpp  filewatcher.cpp  filewatcher.hpp  hram.cpp  main.c  main.cpp  shaders.cpp  shaders.h  wasm.h  wat.cpp  wat.hpp  wat2wasm.cpp  wat2wasm.hpp
